--- a/chrome/locale/zh-CN/auth.properties
+++ b/chrome/locale/zh-CN/auth.properties
@@ -1,12 +1,12 @@
-auth.title=Verify %S's identity
-auth.yourFingerprint=Fingerprint for you, %S:\n%S
-auth.theirFingerprint=Purported fingerprint for %S:\n%S
-auth.help=Verifying a contact's identity helps ensure that the person you are talking to is who they claim to be.
-auth.helpTitle=Verification help
-auth.question=This is the question asked by your contact:\n\n%S\n\nEnter secret answer here (case sensitive):
-auth.secret=Enter secret here:
-auth.error=An error occurred while verifying your contact's identity.
-auth.success=Verifying your contact's identity completed successfully.
-auth.successThem=Your contact has successfully verified your identity. You may want to verify their identity as well by asking your own question.
-auth.fail=Failed to verify your contact's identity.
-auth.done=Done
+auth.title=验证 %S 的身份
+auth.yourFingerprint=你的指纹， %S:\n%S
+auth.theirFingerprint=%S 提供的指纹：\n%S
+auth.help=验证联系人身份可确保交谈对象确实是该联系人本人。
+auth.helpTitle=验证帮助
+auth.question=以下为你的联系人提出的问题：\n\n%S\n\n请在此次输入答案（区分大小写）：
+auth.secret=请在此处输入秘密：
+auth.error=验证联系人身份时出错。
+auth.success=成功验证联系人身份。
+auth.successThem=联系人已成功验证你的身份。你也可以通过提问来验证对方的身份。
+auth.fail=验证联系人身份失败。
+auth.done=完成
