--- a/chrome/locale/zh-CN/otr.properties
+++ b/chrome/locale/zh-CN/otr.properties
@@ -1,34 +1,34 @@
-msgevent.encryption_required_part1=You attempted to send an unencrypted message to %S. As a policy, unencrypted messages are not allowed.
-msgevent.encryption_required_part2=Attempting to start a private conversation. Your message will be retransmitted when the private conversation starts.
-msgevent.encryption_error=An error occurred when encrypting your message. The message was not sent.
-msgevent.connection_ended=%S has already closed their private connection to you. Your message was not sent. Either end your private conversation, or restart it.
-msgevent.setup_error=Error setting up private conversation.
-msgevent.msg_reflected=You are receiving our own OTR messages. You are either trying to talk to yourself, or someone is reflecting your messages back at you.
-msgevent.msg_resent=The last message to %S was resent.
-msgevent.rcvdmsg_not_private=The encrypted message received from %S is unreadable, as you are not currently communicating privately.
-msgevent.rcvdmsg_unreadable=We received an unreadable encrypted message from %S.
-msgevent.rcvdmsg_malformed=We received a malformed data message from %S.
-msgevent.log_heartbeat_rcvd=Heartbeat received from %S.
-msgevent.log_heartbeat_sent=Heartbeat sent to %S.
-msgevent.rcvdmsg_general_err=OTR Error: %S
-msgevent.rcvdmsg_unecrypted=The following message received from %S was not encrypted: %S
-msgevent.rcvdmsg_unrecognized=Unrecognized OTR message received from %S.
-msgevent.rcvdmsg_for_other_instance=%S has sent a message intended for a different session. If you are logged in multiple times, another session may have received the message.
-context.gone_secure_private=Private conversation with %S started.
-context.gone_secure_unverified=Private conversation with %S started. However, their identity has not been verified.
-context.still_secure=Successfully refreshed the private conversation with %S.
-priv.label=Generating private key
-error.enc=Error occurred encrypting message.
-error.not_priv=You sent encrypted data to %S, who wasn't expecting it.
-error.unreadable=You transmitted an unreadable encrypted message.
-error.malformed=You transmitted a malformed data message.
-resent=[resent]
-tlv.disconnected=%S has ended their private conversation with you; you should do the same.
-query.msg=%S has requested an Off-the Record private conversation. However, you do not have a plugin to support that. See http://otr.cypherpunks.ca/ for more information.
-verified.yes=Yes
-verified.no=No
-trust.unused=Unused
-trust.not_private=Not Private
-trust.unverified=Unverified
-trust.private=Private
-trust.finished=Finished
+msgevent.encryption_required_part1=试图发送非加密信息给 %S。根据策略，不允许发送非加密信息。
+msgevent.encryption_required_part2=试图进行私密对话。你的信息将在私密对话启动之后重新发送。
+msgevent.encryption_error=加密信息时出错。信息未成功发送。
+msgevent.connection_ended=%S 已关闭与你之间的私密对话。你的信息未成功发送。请终止私密对话，或者重新开始。
+msgevent.setup_error=设置私密对话出错。
+msgevent.msg_reflected=你收到的是自己的 OTR 信息。可能是你试图和自己对话，或者有人把你的信息发回给你。
+msgevent.msg_resent=发给 %S 的上一条信息已重发。
+msgevent.rcvdmsg_not_private=来自 %S 的加密信息无法阅读，因为当前通信并非私密对话。
+msgevent.rcvdmsg_unreadable=收到来自 %S 的加密信息无法阅读。
+msgevent.rcvdmsg_malformed=收到来自 %S 的数据信息格式有误。
+msgevent.log_heartbeat_rcvd=来自 %S 的心跳 (heartbeat) 信息。
+msgevent.log_heartbeat_sent=发送给 %S 的心跳 (heartbeat) 信息。 
+msgevent.rcvdmsg_general_err=OTR 错误：%S
+msgevent.rcvdmsg_unecrypted=收到来自 %S 的未加密信息如下：%S
+msgevent.rcvdmsg_unrecognized=收到来自%S 的OTR 信息无法识别。
+msgevent.rcvdmsg_for_other_instance=%S 发送的信息针对不同的会话进程。如果多次登录，其他会话进程可能已收到该信息。
+context.gone_secure_private=与 %S 的私密对话已启动。
+context.gone_secure_unverified=与 %S 的私密对话已启动，不过尚未验证对方身份。
+context.still_secure=成功刷新与 %S 之间的私密对话。
+priv.label=生成隐私密钥
+error.enc=对信息加密时出错。
+error.not_priv=向 %S 发送加密数据，但对方没准备好接收加密信息。
+error.unreadable=你发出的加密信息将无法阅读。
+error.malformed=你发出的数据信息格式错误。
+resent=[重发]
+tlv.disconnected=%S 已终止与你的私密对话；你也应该终止该对话。
+query.msg=%S 请求 OTR 私密对话，但是你没有支持这种对话的插件。更多信息，请参阅 http://otr.cypherpunks.ca/。
+verified.yes=是
+verified.no=否
+trust.unused=未使用
+trust.not_private=非私密
+trust.unverified=未验证
+trust.private=私密
+trust.finished=完成
