--- a/chrome/locale/zh-CN/prefs.dtd
+++ b/chrome/locale/zh-CN/prefs.dtd
@@ -1,11 +1,11 @@
-<!ENTITY prefs.otrPreferences "OTR Preferences">
-<!ENTITY prefs.otrSettings "OTR Settings">
-<!ENTITY prefs.requireEncryption "Require encryption">
-<!ENTITY prefs.otrKeys "My Private Keys">
-<!ENTITY prefs.keyForAccount "Key for account:">
-<!ENTITY prefs.fingerprint "Fingerprint:">
-<!ENTITY prefs.knownFingers "Known fingerprints">
-<!ENTITY prefs.introFingers "This space unintentionally left blank.">
-<!ENTITY prefs.showFingers "View">
-<!ENTITY prefs.verifyNudge "Always nudge to verify your contact's identity">
-<!ENTITY prefs.emptyAccountList "No accounts configured">
+<!ENTITY prefs.otrPreferences "OTR 首选项">
+<!ENTITY prefs.otrSettings "OTR 设置">
+<!ENTITY prefs.requireEncryption "请求加密">
+<!ENTITY prefs.otrKeys "我的隐私密钥">
+<!ENTITY prefs.keyForAccount "账号密钥">
+<!ENTITY prefs.fingerprint "指纹">
+<!ENTITY prefs.knownFingers "已知指纹">
+<!ENTITY prefs.introFingers "此次留空。">
+<!ENTITY prefs.showFingers "查看">
+<!ENTITY prefs.verifyNudge "总是提醒联系人身份验证。">
+<!ENTITY prefs.emptyAccountList "未配置任何账号">
