--- a/chrome/locale/zh-CN/priv.dtd
+++ b/chrome/locale/zh-CN/priv.dtd
@@ -1,2 +1,2 @@
-<!ENTITY privDialog.title "Generating private key">
-<!ENTITY privDialog.done "Done">
+<!ENTITY privDialog.title "生成隐私密钥">
+<!ENTITY privDialog.done "完成">
