--- a/chrome/locale/zh-CN/ui.properties
+++ b/chrome/locale/zh-CN/ui.properties
@@ -1,17 +1,17 @@
-start.label=Start private conversation
-end.label=End private conversation
-refresh.label=Refresh private conversation
-auth.label=Verify your contact's identity
-reauth.label=Reverify your contact's identity
-alert.refresh=Attempting to refresh the private conversation with %S.
-alert.gone_insecure=Private conversation with %S ended.
-finger.seen=%S is contacting you from an unrecognized computer. You should verify this contact's identity.
-finger.unseen=%S's identity has not been verified yet. You should verify this contact's identity.
-finger.verify=Verify
+start.label=开始私密对话
+end.label=终止私密对话
+refresh.label=刷新私密对话
+auth.label=验证联系人身份
+reauth.label=重新验证联系人身份
+alert.refresh=试图刷新与 %S 之间的私密对话。 
+alert.gone_insecure=与 %S 之间的私密对话已终止。
+finger.seen=无法识别联系人 %S 所用的计算机，请验证对方身份。
+finger.unseen=%S 身份尚未验证，请验证对方身份。
+finger.verify=\ 验证
 verify.accessKey=V
-state.not_private=The current conversation is not private.
-state.unverified=The current conversation is private but %S's identity has not been verified.
-state.private=The current conversation is private and %S's identity has been verified.
-state.finished=%S has ended their private conversation with you; you should do the same.
-afterauth.private=You have verified %S's identity.
-afterauth.unverified=%S's identity has not been verified.
+state.not_private=当前对话并非私密对话。
+state.unverified=当前对话为私密对话，但 %S 身份尚未验证。
+state.private=前对话为私密对话，并且 %S 身份已验证。
+state.finished=%S 已终止与你的私密对话；你也应该终止该对话。
+afterauth.private=已验证 %S 的身份。
+afterauth.unverified=%S 的身份尚未验证。
